fix spacing issue with icon and text content type

--- a/resources/gato-template/css/icontext.scss
+++ b/resources/gato-template/css/icontext.scss
@@ -1,5 +1,6 @@
 
 .icontext-icon{
+    line-height: 1;
     font-size: 7.2rem;
     text-align: center;
     margin: 0;
